fix: z-index

--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -74,6 +74,11 @@
 		}
 	}
 
+	.logo {
+		position: relative;
+		z-index: 3;
+	}
+
 	@include media-breakpoint-up(sm) {
 	}
 
